--- a/RNAdam-core/pom.xml
+++ b/RNAdam-core/pom.xml
@@ -128,6 +128,10 @@
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-graphx_${scala.version.prefix}</artifactId>
     </dependency>
+      <dependency>
+          <groupId>org.apache.spark</groupId>
+          <artifactId>spark-mllib_${scala.version.prefix}</artifactId>
+      </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.version.prefix}</artifactId>
