--- a/pom.xml
+++ b/pom.xml
@@ -308,6 +308,11 @@
         <artifactId>spark-graphx_${scala.version.prefix}</artifactId>
         <version>${spark.version}</version>
       </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_${scala.version.prefix}</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
